[package]
authors = [
  "Sokcheanith Ros <sokcheanith1031@gmail.com>"
]
name = "domner_tech_sql_client"
version = "0.1.0"
edition = "2024"
documentation = "https://github.com/DomnerTech/DomnerTech-SqlClient"
keywords = ["tds", "mssql", "sql", "postgres", "postgreSql", "pgsql"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/DomnerTech/DomnerTech-SqlClient"

[dependencies]
anyhow = "1.0.99"
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = {version = "0.7.16", features = ["compat"]}

futures-util = {version = "0.3.31", optional = true}
tiberius = {version = "0.12.3", optional = true}
tokio-postgres = {version = "0.7.13", optional = true}
postgres-native-tls = {version = "0.5.1", optional = true} # For SSL support in PgSQL

[features]
default = []
mssql = ["tiberius"]
pgsql = ["tokio-postgres", "postgres-native-tls", "futures-util"]
