[package]
authors = [
  "Sokcheanith Ros <sokcheanith1031@gmail.com>"
]
name = "domner_tech_sql_client"
version = "0.1.5"
edition = "2024"
documentation = "https://github.com/DomnerTech/DomnerTech-SqlClient"
keywords = ["tds", "mssql", "sql", "postgresql", "pgsql"]
description = "DomnerTech-SqlClient is for connect to SQL like MSSQL and PostgreSQL"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/DomnerTech/DomnerTech-SqlClient"

[dependencies]
anyhow = "1.0.100"
tokio = {version = "1.47.1", features = ["full"]}
tokio-util = {version = "0.7.16", features = ["compat"]}
uuid = {version = "1.18.1", features = ["v4","fast-rng", "serde"]}
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.38.0", features = ["db-tokio-postgres", "macros"] }

futures-util = {version = "0.3.31", optional = true}
tiberius = {version = "0.12.3", optional = true, features = ["chrono", "sql-browser-tokio", "tds73", "rust_decimal"]}
tokio-postgres = {version = "0.7.14", optional = true, features = ["with-uuid-1", "with-chrono-0_4"]}
postgres-native-tls = {version = "0.5.2", optional = true} # For SSL support in PgSQL

[features]
default = []
mssql = ["tiberius"]
pgsql = ["tokio-postgres", "postgres-native-tls", "futures-util"]
